style: add margins, and corrected spacing of the list

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   margin: 0
 }
 
+.container {
+  margin-left: 80px;
+  margin-right: 80px;
+}
+
 header {
   background-image: url(../img/pattern.png);
   background-size: 400px, 200px;
@@ -47,6 +52,8 @@ header {
 
 .article-list {
   padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 table {
